<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".component.rpclient.login.LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:text="@string/lbl_rp_application"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="75dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/successView"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="336dp"
        android:text="@string/lbl_rp_Success"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCheckSuccess"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageCheckSuccess"
        android:layout_width="180dp"
        android:layout_height="122dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="53dp"
        android:contentDescription="@string/checkSuccess"
        android:src="@drawable/check"
        app:layout_constraintBottom_toTopOf="@+id/successView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>