<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".component.rpclient.login.LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:text="@string/lbl_rp_application"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="75dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/failedView"
        android:layout_width="115dp"
        android:layout_height="28dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="308dp"
        android:text="@string/lbl_rp_Failed"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFailed"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageFailed"
        android:layout_width="167dp"
        android:layout_height="94dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="61dp"
        android:contentDescription="@string/login_failed"
        android:src="@drawable/error"
        app:layout_constraintBottom_toTopOf="@+id/failedView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>